Creating site for 1.155-SNAPSHOT

--- a/team-list.html
+++ b/team-list.html
@@ -40,7 +40,7 @@
            
                                           <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                <li class="expanded">
+                                                                                                                                                                                                                                                                  <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -57,6 +57,9 @@
             </li>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Management">Issue Management</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -99,15 +102,38 @@
 <th>Image</th>
 <th>Id</th>
 <th>Name</th>
-<th>Email</th></tr>
+<th>Email</th>
+<th>Organization</th>
+<th>Organization URL</th>
+<th>Time Zone</th></tr>
 <tr class="b">
 <td><img src="http://www.gravatar.com/avatar/562f8eec7841ccd25bc614dbba801b8f?d=mm&amp;s=60" alt="" /></td>
 <td><a name="halkeye"></a>halkeye</td>
 <td>Gavin Mogan</td>
-<td><a class="externalLink" href="mailto:gavin@saucelabs.com">gavin@saucelabs.com</a></td></tr></table></div>
+<td><a class="externalLink" href="mailto:gavin@saucelabs.com">gavin@saucelabs.com</a></td>
+<td>Sauce Labs</td>
+<td><a class="externalLink" href="http://www.saucelabs.com/">http://www.saucelabs.com/</a></td>
+<td>America/Vancouver</td></tr>
+<tr class="a">
+<td><img src="http://www.gravatar.com/avatar/e3a672c7e694b019d80740a17cb69eee?d=mm&amp;s=60" alt="" /></td>
+<td><a name="moizjv"></a>moizjv</td>
+<td>Moiz Virani</td>
+<td>moiz@saucelabs.comx</td>
+<td>Sauce Labs</td>
+<td><a class="externalLink" href="http://www.saucelabs.com/">http://www.saucelabs.com/</a></td>
+<td>America/Los_Angeles</td></tr></table></div>
 <div class="section">
 <h3><a name="Contributors"></a>Contributors</h3><a name="Contributors"></a>
-<p>There are no contributors listed for this project. Please check back again later.</p></div></div>
+<p>The following additional people have contributed to this project through the way of suggestions, patches or documentation.</p>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Image</th>
+<th>Name</th>
+<th>Email</th></tr>
+<tr class="b">
+<td><img src="http://www.gravatar.com/avatar/94a0675263bc7a4201b42a6243adc436?d=mm&amp;s=60" alt="" /></td>
+<td>Ross Rowe</td>
+<td><a class="externalLink" href="mailto:piaross@gmail.com">piaross@gmail.com</a></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
