--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            
                                           <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                <li class="expanded">
+                                                                                                                                                                                                                                                                  <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -58,6 +58,9 @@
                       <li class="none">
             <strong>About</strong>
           </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Management">Issue Management</a>
+            </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
