--- a/issue-tracking.html
+++ b/issue-tracking.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Jenkins Sauce OnDemand plugin &#x2013; Project Distribution Management</title>
+    <title>Jenkins Sauce OnDemand plugin &#x2013; Issue Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -53,14 +53,14 @@
                           <a href="dependency-management.html" title="Dependency Management">Dependency Management</a>
             </li>
                       <li class="none">
-            <strong>Distribution Management</strong>
-          </li>
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
+            </li>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
             </li>
                       <li class="none">
-                          <a href="issue-tracking.html" title="Issue Management">Issue Management</a>
-            </li>
+            <strong>Issue Management</strong>
+          </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
@@ -92,12 +92,12 @@
       <div id="contentBox">
         <div class="section">
 <h2><a name="Overview"></a>Overview</h2><a name="Overview"></a>
-<p>The following is the distribution management information used by this project.</p>
+<p>This project uses <a class="externalLink" href="http://www.atlassian.com/software/jira">JIRA</a>.</p></div>
 <div class="section">
-<h3><a name="Repository_-_maven.jenkins-ci.org"></a>Repository - maven.jenkins-ci.org</h3><a name="Repository_-_maven.jenkins-ci.org"></a><a class="externalLink" href="http://maven.jenkins-ci.org:8081/content/repositories/releases/">http://maven.jenkins-ci.org:8081/content/repositories/releases/</a></div>
-<div class="section">
-<h3><a name="Snapshot_Repository_-_cloudbees.private.release.repository"></a>Snapshot Repository - cloudbees.private.release.repository</h3><a name="Snapshot_Repository_-_cloudbees.private.release.repository"></a>
-<p>dav:https://repository-saucelabs.forge.cloudbees.com/release</p></div></div>
+<h2><a name="Issue_Management"></a>Issue Management</h2><a name="Issue_Management"></a>
+<p>Issues, bugs, and feature requests should be submitted to the following issue management system for this project.</p>
+<div class="source">
+<pre><a class="externalLink" href="https://issues.jenkins-ci.org/browse/JENKINS">https://issues.jenkins-ci.org/browse/JENKINS</a></pre></div></div>
       </div>
     </div>
     <div class="clear">
