--- a/plugin-management.html
+++ b/plugin-management.html
@@ -40,7 +40,7 @@
            
                                           <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                <li class="expanded">
+                                                                                                                                                                                                                                                                  <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -57,6 +57,9 @@
             </li>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Management">Issue Management</a>
             </li>
                       <li class="none">
             <strong>Plugin Management</strong>
