--- a/source-repository.html
+++ b/source-repository.html
@@ -40,7 +40,7 @@
            
                                           <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                <li class="expanded">
+                                                                                                                                                                                                                                                                  <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -57,6 +57,9 @@
             </li>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Management">Issue Management</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -92,12 +95,14 @@
 <p>This project uses <a class="externalLink" href="http://git-scm.com/">Git</a> to manage its source code. Instructions on Git use can be found at <a class="externalLink" href="http://git-scm.com/documentation">http://git-scm.com/documentation</a>.</p></div>
 <div class="section">
 <h2><a name="Web_Browser_Access"></a>Web Browser Access</h2><a name="Web_Browser_Access"></a>
-<p>There is no browsable version of the source code repository listed for this project. Please check back again later.</p></div>
+<p>The following is a link to a browsable version of the source repository:</p>
+<div class="source">
+<pre><a class="externalLink" href="https://github.com/jenkinsci/sauce-ondemand-plugin">https://github.com/jenkinsci/sauce-ondemand-plugin</a></pre></div></div>
 <div class="section">
 <h2><a name="Anonymous_Access"></a>Anonymous Access</h2><a name="Anonymous_Access"></a>
 <p>The source can be checked out anonymously from Git with this command (See <a class="externalLink" href="http://git-scm.com/docs/git-clone">http://git-scm.com/docs/git-clone</a>):</p>
 <div class="source">
-<pre>$ git clone git://github.com/jenkinsci/sauce-ondemand-plugin.git</pre></div></div>
+<pre>$ git clone https://github.com/jenkinsci/sauce-ondemand-plugin.git</pre></div></div>
 <div class="section">
 <h2><a name="Developer_Access"></a>Developer Access</h2><a name="Developer_Access"></a>
 <p>Only project developers can access the Git tree via this method (See <a class="externalLink" href="http://git-scm.com/docs/git-clone">http://git-scm.com/docs/git-clone</a>).</p>
